Tek3/DevOps/DOP_bernstein/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll
  namespace: default
spec:
  selector:
    matchLabels:
      run: poll
  replicas: 2
  template:
    metadata:
      labels:
        run: poll
    spec:
      containers:
        - name: poll
          image: "epitechcontent/t-dop-600-poll:k8s"
          resources:
            limits:
              memory: "128M"
          ports:
            - containerPort: 80
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - redis
              topologyKey: "poll.dop.io:30021"
