Tek3/DevOps/DOP_bernstein/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: default
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:5.0
          ports:
            - containerPort: 6379
          labels:
            - "traefik.enable=false"
      restartPolicy: Always
