Tek3/DevOps/DOP_bernstein/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: default
spec:
  selector:
    matchLabels:
      run: worker
  replicas: 1
  template:
    metadata:
      labels:
        run: worker
    spec:
      containers:
        - name: worker
          image: "epitechcontent/t-dop-600-worker:k8s"
          resources:
            limits:
              memory: "256M"
          labels:
            - "traefik.enable=false"
      restartPolicy: Always
