Tek3/DevOps/DOP_bernstein/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
  labels:
    run: poll
spec:
  selector:
    app: poll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6379
