Tek3/DevOps/DOP_bernstein/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  type: NodePort ## Pas sûr
  selector:
    app: postgres
  ports:
    - port: 5432 # Pas sûr
      targetPort: 5432 # Pas sûr
