Tek3/DevOps/DOP_bernstein/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    run: result
spec:
  selector:
    app: result
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5432
