Tek3/DevOps/DOP_bernstein/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-public
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
      nodePort: 30021
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
      nodePort: 30042
  type: NodePort
