Tek3/DevOps/DOP_bernstein/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "poll.dop.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: poll
            port:
              number: 80
